sass/jssynth.scss
$font-family: "Helvetica Neue", arial, sans-serif;
$orange: orange;
$light-orange: papayawhip;
$red: #c00;
$black: #130f30;
$white: #fff;
$border-color: #ddd;

$size-half: 0.75rem;
$size-1: 1.5rem;
$size-2: 3.0rem;
$size-3: 4.5rem;
$size-4: 6.0rem;
$size-5: 9.0rem;

@import "controls.scss";
@import "base.scss";

body {
  margin: 0;
  padding: 0;
  min-height: 100vh;
  font-family: $font-family;
  font-size: 20px;
  background: $white;
  color: $black;
  line-height: 1.5em;
  font-weight: 300;
}

/* Header */

.logo {
  color: $red;
  line-height: 1.0em;
}

#transport {
  -webkit-justify-content: center;
  justify-content: center;
}

.popup-box {
  background: $white;
  position: absolute;
  right: 0;
  border: 2px solid $border-color;
  border-radius: 10px;
  width: 15.0rem;
}

.popup-box::before {
    content: "";
    position: absolute;
    bottom: 100%;
    right: 1.25rem;
    border-width: 1.25rem;
    border-style: solid;
    border-color: transparent transparent $border-color transparent;
}

.popup-box::after {
    content: "";
    position: absolute;
    bottom: 100%;
    right: 1.45rem;
    border-width: 1.1rem;
    border-style: solid;
    border-color: transparent transparent $white transparent;
}

@media (max-width: 768px) {
  #header {
    -webkit-flex-flow: row wrap;
    flex-flow: row wrap;
  }

  #logo-container {
    -webkit-order: 1;
    order: 1;
    -webkit-flex: 1 50%;
    flex: 1 50%;
  }

  .logo {
    font-size: 2.0rem;
  }

  #transport {
    -webkit-order: 3;
    order: 3;
    -webkit-flex: 1 100%;
    flex: 1 100%;
    padding-top: 1.5rem;
    -webkit-justify-content: space-between;
    justify-content: space-between;
  }

  .transport-inner {
    -webkit-flex: 1;
    flex: 1;
  }

  .transport-error {
    margin-left: 0;
    margin-right: 0;
  }

  .transport-controls {
    width: 100%;
  }

  .transport-controls .control {
    display: inline-block;
    width: 50%;
  }

  #download-container {
    -webkit-order: 2;
    order: 2;
    -webkit-flex: 1 50%;
    flex: 1 50%;
  }
}

@media (max-width: 480px) {
  .logo {
    font-size: 1.5rem;
  }

  #transport .control {
    -webkit-flex-direction: row;
    flex-direction: row;
  }

  .transport-controls {
    width: auto;
  }

  .transport-controls .control {
    width: auto;
    display: -webkit-flex;
    display: flex;
  }
}


/* Sequencer */

.sequencer-currentStep {
  background: $orange;
  color: $white;
}

.sequencer-currentStep-light {
  background: $light-orange;
  color: $white;
}

.sequencer-cell {
  min-width: 9.0rem;
}

.sequencer-cell:last-child {
  border-right: none;
}

.expanded {
  width: 200px;
}

.expanded > li > .short-name {
  display: none;
}

.contracted {
  width: 64px;
}

.contracted > li {
  padding-right: 0;
}

.contracted > li > input {
  display: none;
}

.contracted > li > .sequencer-volume-container {
  display: none;
}


/* Instrument editor */

.instrument-panel {
  min-width: 600px;
}

@media (max-width: 768px) {
  .instrument-panel-container {
    -webkit-flex-direction: column;
    flex-direction: column;
    align-items: stretch;
    width: 100%;
  }

  .instrument-panel {
    -webkit-flex: 1;
    flex: 1;
    min-width: 0;
    margin: 0;
    padding-left: 0;
    padding-right: 0;
    padding-bottom: 1.5rem;
    border-left: 0;
    border-right: 0;
    border-bottom: 1px solid $border-color;
  }

  .instrument-panel:last-child {
    border-bottom: 0;
    padding-bottom: 0;
  }
}


/* Pattern editor */

.paneTab {
  color: $black;
  text-decoration: none;
}

.paneTabUnselected {
  padding-bottom: 2px;
  border-bottom: 2px solid $border-color;
}

.paneTabSelected {
  border-bottom: 4px solid $orange;
}

.helperToggle {
  color: #0af;
  cursor: pointer;
}

.note-container {
  width: 6.25%;
  min-width: 3.0rem;
  box-sizing: border-box;
  padding-left: 2px;
  padding-right: 2px;
}

.note-column-header {
  color: #ccc;
}

input.note {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  outline: none;
  border: 0;
  border-bottom: 1px solid $black;
  border-radius: 0;  /* For iOS */
  margin: 0 0 1px 0;
  font-size: 1.0rem;
  line-height: 2.0rem;
  font-weight: normal;
}

input.note:focus {
  background: #f3f3f3;
}


/* Other */

.section-header {
  line-height: 1.5rem;
}

.indented {
  padding-left: 1.0rem;
}

.lightText { color: #aaa; }

.full-width { width: 100%; }

.selectedOption {
  border: $border-color 2px solid;
  background: #ddd;
}


@media (max-width: 768px) {
  .control {
    -webkit-align-items: flex-start;
    align-items: flex-start;
  }

  .control-label {
    width: 35%;
  }

  .waveformOptionsContainer {
    -webkit-flex-wrap: wrap;
    flex-wrap: wrap;
    flex: 1;
    -webkit-flex: 1;
  }

  .radioContainer {
    -webkit-flex: 0 0 50%;
    flex: 0 0 50%;
  }
}

@media (max-width: 480px) {
  .helperToggle {
    display: inline-block;
  }

  .control {
    -webkit-flex-direction: column;
    flex-direction: column;
  }

  .control-label {
    width: 100%;
  }

  .annotated-input {
    width: 100%;
  }

  .indented {
    padding-left: 0;
  }
}

